# investing-micro

./: .dockerignore  .env  .env.cloudbackend  .env.local  .env.local.example  .gitignore  .gitlab-ci.yml  Jenkinsfile  Jenkinsfile_original  Makefile  docker-compose.cloudaws.yml  docker-compose.cloudbackend.yml  docker-compose.clouddb.yml  docker-compose.cloudgoogle.yml  docker-compose.extra.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml
project/consumer/: .env  Cargo.toml
project/consumer/src/: config.rs  consumer.rs  handler.rs  main.rs  utils.rs
project/consumer/src/api/application/: mod.rs
project/consumer/src/api/application/routing/: routing.rs
project/consumer/src/api/application/services/: conversation_service.rs  mod.rs
project/consumer/src/api/application/use_case/: mod.rs
project/consumer/src/api/domain/interface/: imongo_repository.rs  iresponse_repository.rs  mod.rs
project/consumer/src/api/domain/models/: conversation.rs  conversation_state.rs  mod.rs
project/consumer/src/api/infrastructure/: mod.rs
project/consumer/src/api/infrastructure/db/: mod.rs  mongo_repository.rs
project/consumer/src/api/infrastructure/services/: conversation_service.rs  mod.rs  mongo_response_repository.rs
project/consumer/src/consumer/: mod.rs
project/consumer/src/consumer/domain/: mod.rs
project/consumer/src/consumer/domain/interface/: mod.rs  (+1 more)
project/consumer/src/consumer/infrastructure/: mod.rs
project/consumer/src/rabbit/: consumer.rs  consumer_original.rs  mod.rs
project/consumer/src/shared/api/: api_response.rs  mod.rs
(+558 files in other folders)
