[package]
name = "rabbit_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.0.0"
tokio = { version = "1.42", features = ["full"] }
tokio-amqp = "^2.0"
futures-util = "0.3.26"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0.217", features = ["derive"] }
async-trait = "0.1.85"
mongodb = "3.1.0"
bson = "2.3.0"
serde_json = "1.0.135"
